--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-Save the local business you love
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Save the local business you love</title>
+  </head>
+  <body>
+	<h1>Save the local business you love</h1>
+
+    <p>Thanks for stopping by.</p>
+
+    <p>
+	We all are going through an unprecedentedly difficult time. Save the local businesses you love during crisis.
+	Pay them now for a promise to serve you in future, just like they always have
+	</p>
+
+    <img src="servemelater.jpeg" alt="Serve">
+
+    <p>Let's help them together.</p>
+  </body>
+</html>
