--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Save the local business you love</title>
   </head>
   <body>
-	<h1>Save the local business you love</h1>
+	<h1>Save the local business you love.</h1>
 
     <p>Thanks for stopping by.</p>
 
