--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	Pay them now for a promise to serve you in future, just like they always have
 	</p>
 
-    <img src="servemelater.jpeg" alt="Serve">
+    <img src="servemelater.png" alt="Serve">
 
     <p>Let's help them together.</p>
   </body>
