--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <p>
 	We all are going through an unprecedentedly difficult time. Save the local businesses you love during crisis.
-	Pay them now for a promise to serve you in future, just like they always have
+	Pay them now for a promise to serve you in future, just like they always have.
 	</p>
 
     <img src="servemelater.png" alt="Serve">
